--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Actions Course 2024</title>
-</head>
-<body>
-    <h3>Git && GitHub && GitHub Actions</h3>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Git && GitHub && GitHub Actions Course</title>
+  </head>
+  <body>
+    <h1>Git & GitHub Crash Course</h1>
+    <p>Because the basics are important!</p>
+    <p>
+      Learn more about Git on
+      <a href="https://git-scm.com/book/en/v2">the official website.</a>
+    </p>
+  </body>
 </html>
